completed tdd for RepositoriesList; added msw and handlers for component tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/fetch-mock": "^7.3.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.13",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "7.1.15",
@@ -49,10 +48,12 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "@types/node-fetch": "^2.5.10",
     "@types/redux-mock-store": "^1.0.2",
     "fetch-mock": "^9.11.0",
     "fetch-mock-jest": "^1.5.1",
+    "msw": "^0.29.0",
     "redux-mock-store": "^1.5.4"
   }
 }
